# projectionlab-mcp

./: .gitignore  .mcp.json  Cargo.toml  README.md  default.nix  flake.nix  run-mcp.sh  rust-toolchain.toml  schema.json
src/: browser.rs  lib.rs  main.rs  resources.rs  server.rs  sync.rs
src/models/: accounts.rs  assets.rs  common.rs  debt.rs  expenses.rs  income.rs  milestone.rs  mod.rs  plan.rs  priorities.rs  resources.rs  settings.rs  starting_asset.rs
src/tools/: accounts.rs  debts.rs  events.rs  mod.rs  params.rs  plan_accounts.rs  plan_assets.rs  plans.rs  progress.rs  schema_help.rs  simulation.rs  starting_assets.rs
tests/: model_tests.rs  schema_validation.rs
