[package]
name = "projectionlab-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "export-data"
path = "src/bin/export_data.rs"

[[bin]]
name = "call-tool"
path = "src/bin/call_tool.rs"

[dependencies]
# MCP server framework with stdio transport
rmcp = { version = "0.8", features = [
    "server",
    "transport-io",
] }

# Browser automation with Firefox
thirtyfour = "0.33"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization and JSON schema
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"

# Error handling
anyhow = "1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date and time
chrono = "0.4"

# Retry with backoff
backoff = { version = "0.4", features = ["tokio"] }

# XDG/platform directories
dirs = "6"
